--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,133 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     tools:context=".MainActivity">
 
-    <TextView
+
+    <ImageButton
+        android:id="@+id/buton_temperatura"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.45"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:srcCompat="@mipmap/ic_launcher" />
+    <ImageButton
+        android:id="@+id/buton_umiditate"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.45"
+        app:srcCompat="@mipmap/ic_launcher" />
+    <View
+        android:id="@+id/divider"
+        android:layout_width="3dp"
+        android:layout_height="0dp"
+        android:background="#bfbfbf"
+        app:layout_constraintTop_toTopOf="@id/buton_temperatura"
+        app:layout_constraintLeft_toRightOf="@id/buton_temperatura"
+        app:layout_constraintRight_toLeftOf="@id/buton_umiditate"
+        app:layout_constraintBottom_toBottomOf="@id/buton_temperatura" />
+    <android.support.constraint.Guideline
+        android:id="@+id/gd1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.4" />
+    <TextView
+        android:id="@+id/curr_val"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="55"
+        android:textSize="70sp"
+        android:textStyle="bold"
+        android:typeface="monospace"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/gd1"/>
+
+
+    <android.support.constraint.Guideline
+        android:id="@+id/gd2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.7" />
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="#3d5c5c"
+        android:padding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/gd2"
+        app:layout_constraintVertical_bias="0.333">
+
+        <View
+            android:id="@+id/d2"
+            android:layout_width="0dp"
+            android:layout_height="3dp"
+            android:background="#bfbfbf"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <ImageView
+            android:id="@+id/dayView"
+            android:layout_width="45dp"
+            android:layout_height="33dp"
+            app:srcCompat="@mipmap/ic_launcher_round"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/d3"
+            app:layout_constraintTop_toBottomOf="@id/d2"/>
+
+        <ImageView
+            android:id="@+id/nightView"
+            android:layout_width="45dp"
+            android:layout_height="33dp"
+            app:srcCompat="@mipmap/ic_launcher"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/d3"
+            app:layout_constraintTop_toBottomOf="@id/d2"/>
+
+
+        <View
+            android:id="@+id/d3"
+            android:layout_width="3dp"
+            android:layout_height="0dp"
+            android:background="#bfbfbf"
+            app:layout_constraintTop_toBottomOf="@id/d2"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+        <TextView
+            android:id="@+id/set_val_day"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="day"
+            android:background="#ff3300"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:typeface="sans"
+            app:layout_constraintLeft_toLeftOf="@id/d3"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/dayView"/>
+        <TextView
+            android:id="@+id/set_val_night"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="night"
+            android:background="#ff3300"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:typeface="sans"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="@id/d3"
+            app:layout_constraintTop_toBottomOf="@id/nightView"/>
+
+
+
+    </android.support.constraint.ConstraintLayout>
+
+
 
 </android.support.constraint.ConstraintLayout>
