--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:padding="10dp"
     tools:context=".MainActivity">
 
-
+    <android.support.constraint.Guideline
+        android:id="@+id/gd0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.12" />
     <ImageButton
         android:id="@+id/buton_temperatura"
         android:layout_width="0dp"
@@ -15,6 +20,7 @@
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.45"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/gd0"
         app:srcCompat="@mipmap/ic_launcher" />
     <ImageButton
         android:id="@+id/buton_umiditate"
@@ -23,6 +29,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.45"
+        app:layout_constraintTop_toBottomOf="@id/gd0"
         app:srcCompat="@mipmap/ic_launcher" />
     <View
         android:id="@+id/divider"
@@ -43,8 +50,8 @@
         android:id="@+id/curr_val"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="55"
-        android:textSize="70sp"
+        android:text="55 %"
+        android:textSize="100sp"
         android:textStyle="bold"
         android:typeface="monospace"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -62,19 +69,21 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#3d5c5c"
+
         android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/gd2"
         app:layout_constraintVertical_bias="0.333">
 
         <View
-            android:id="@+id/d2"
+            android:id="@+id/d2_l"
             android:layout_width="0dp"
             android:layout_height="3dp"
             android:background="#bfbfbf"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.45"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"/>
         <ImageView
             android:id="@+id/dayView"
             android:layout_width="45dp"
@@ -82,7 +91,40 @@
             app:srcCompat="@mipmap/ic_launcher_round"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/d3"
-            app:layout_constraintTop_toBottomOf="@id/d2"/>
+            app:layout_constraintTop_toBottomOf="@id/d2_l"/>
+        <TextView
+            android:id="@+id/set_val_night"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="day"
+            android:background="#ff3300"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:typeface="sans"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="@id/d3"
+            app:layout_constraintTop_toBottomOf="@id/nightView"/>
+        <View
+            android:id="@+id/d3"
+            android:layout_width="3dp"
+            android:layout_height="0dp"
+            android:background="#bfbfbf"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toBottomOf="@id/d2_l"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
+        <View
+            android:id="@+id/d2_r"
+            android:layout_width="0dp"
+            android:layout_height="3dp"
+            android:background="#bfbfbf"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.45"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+
 
         <ImageView
             android:id="@+id/nightView"
@@ -91,17 +133,7 @@
             app:srcCompat="@mipmap/ic_launcher"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toRightOf="@id/d3"
-            app:layout_constraintTop_toBottomOf="@id/d2"/>
-
-
-        <View
-            android:id="@+id/d3"
-            android:layout_width="3dp"
-            android:layout_height="0dp"
-            android:background="#bfbfbf"
-            app:layout_constraintTop_toBottomOf="@id/d2"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/d2_r"/>
         <TextView
             android:id="@+id/set_val_day"
             android:layout_width="wrap_content"
@@ -114,18 +146,10 @@
             app:layout_constraintLeft_toLeftOf="@id/d3"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dayView"/>
-        <TextView
-            android:id="@+id/set_val_night"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="night"
-            android:background="#ff3300"
-            android:textSize="40sp"
-            android:textStyle="bold"
-            android:typeface="sans"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="@id/d3"
-            app:layout_constraintTop_toBottomOf="@id/nightView"/>
+
+
+
+
 
 
 
