--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
+    android:background="@drawable/gradient_main"
     tools:context=".MainActivity">
+
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+
+        app:layout_constraintBottom_toTopOf="@id/gd0"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.50"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.05">
+        <ImageButton
+            android:id="@+id/buton_setari"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.2"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="parent"
+            app:srcCompat="@mipmap/ic_launcher" />
+        <TextView
+            android:id="@+id/Settings"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Settings"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:typeface="monospace"
+            android:layout_weight="0.8"/>
+
+    </LinearLayout>
 
     <android.support.constraint.Guideline
         android:id="@+id/gd0"
@@ -39,7 +74,10 @@
         app:layout_constraintTop_toTopOf="@id/buton_temperatura"
         app:layout_constraintLeft_toRightOf="@id/buton_temperatura"
         app:layout_constraintRight_toLeftOf="@id/buton_umiditate"
-        app:layout_constraintBottom_toBottomOf="@id/buton_temperatura" />
+        app:layout_constraintBottom_toBottomOf="@id/buton_temperatura"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"/>
+
     <android.support.constraint.Guideline
         android:id="@+id/gd1"
         android:layout_width="wrap_content"
@@ -123,9 +161,6 @@
             app:layout_constraintWidth_percent="0.45"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
-
-
-
         <ImageView
             android:id="@+id/nightView"
             android:layout_width="45dp"
@@ -138,7 +173,7 @@
             android:id="@+id/set_val_day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="day"
+            android:text="night"
             android:background="#ff3300"
             android:textSize="40sp"
             android:textStyle="bold"
@@ -154,7 +189,6 @@
 
 
     </android.support.constraint.ConstraintLayout>
-
 
 
 </android.support.constraint.ConstraintLayout>
